# AndroidUVCCameraSample

./: .gitignore  README.md
AndroidLibyuvDemo/app/: build.gradle
AndroidLibyuvDemo/app/src/main/java/com/hzl/libyuvdemo/: MainActivity.java
AndroidLibyuvDemo/gradle/wrapper/: gradle-wrapper.properties
AndroidLibyuvDemo/libyuv/: build.gradle
AndroidOpenCVwithUVC/: build.gradle  local.properties
AndroidOpenCVwithUVC/app/: build.gradle
AndroidOpenCVwithUVC/app/src/main/: AndroidManifest.xml
AndroidOpenCVwithUVC/app/src/main/java/com/serenegiant/opencvwithuvc/: MainActivity.java
AndroidOpenCVwithUVC/app/src/main/res/layout/: activity_main.xml
AndroidOpenCVwithUVC/gradle/wrapper/: gradle-wrapper.properties
AndroidOpenCVwithUVC/libuvccamera-release/: build.gradle
AndroidOpenCVwithUVC/libuvccamera-release/src/main/: AndroidManifest.xml
AndroidOpenCVwithUVC/libuvccamera-release/src/main/jni/: Application.mk
AndroidOpenCVwithUVC/opencv/: build.gradle
AndroidOpenCVwithUVC/opencv/src/main/java/com/serenegiant/opencv/: ImageProcessor.java
AndroidOpenCVwithUVC/opencv/src/main/jni/: Application.mk
AndroidOpenCVwithUVC/opencv/src/main/jni/common/: common_utils.cpp
AndroidOpenCVwithUVC/usbCameraCommon-release/: build.gradle
AndroidOpenCVwithUVC/usbCameraCommon-release/src/main/java/com/serenegiant/usbcameracommon/: UVCCameraHandlerMultiSurface.java
AndroidSimpleWebCamEclipse/: .project
AndroidSimpleWebCamEclipse/src/com/camera/simplewebcam/: CameraPreview.java
AndroidSimpleWebCamStudio/SimpleWebCam/: build.gradle
AndroidSimpleWebCamStudio/SimpleWebCam/src/main/: AndroidManifest.xml
AndroidSimpleWebCamStudio/SimpleWebCam/src/main/java/com/camera/simplewebcam/: CameraPreview.java  Main.java  Utils.java
AndroidSimpleWebCamStudio/SimpleWebCam/src/main/jni/: ImageProc.c
AndroidSimpleWebCamStudio/gradle/wrapper/: gradle-wrapper.properties
AndroidUSBCamera/: README.md  build.gradle
AndroidUSBCamera/app/: build.gradle
AndroidUSBCamera/app/src/main/: AndroidManifest.xml
AndroidUSBCamera/app/src/main/res/layout/: activity_splash.xml  activity_usbcamera.xml
AndroidUSBCamera/app/src/main/res/menu/: main_toobar.xml
AndroidUSBCamera/app/src/main/res/values/: colors.xml  strings.xml
AndroidUSBCamera/gradle/wrapper/: gradle-wrapper.properties
AndroidUSBCamera/libusbcamera/: build.gradle
AndroidUSBCamera/libusbcamera/src/main/: AndroidManifest.xml
AndroidUSBCamera/libusbcamera/src/main/java/com/calcomp/usbcamera/: UVCCameraHelper.java
AndroidUSBCamera/libusbcamera/src/main/java/com/serenegiant/usb/: CameraDialog.java  USBMonitor.java  UVCCamera.java
AndroidUSBCamera/libusbcamera/src/main/jni/: Application.mk
AndroidUSBCamera/libusbcamera/src/main/jni/UVCCamera/: UVCCamera.cpp  UVCPreview.cpp
AndroidUSBUVCCamera/: local.properties
AndroidUSBUVCCamera/app/: build.gradle
AndroidUSBUVCCamera/app/src/main/jni/: Android.mk  Application.mk  ImageProc.h  UsbCameraProc.cpp
AndroidUSBUVCCamera/gradle/wrapper/: gradle-wrapper.properties
AndroidUVCCameraDemo/: README.md  build.gradle
AndroidUVCCameraDemo/app/: build.gradle
AndroidUVCCameraDemo/app/src/main/: AndroidManifest.xml
AndroidUVCCameraDemo/gradle/wrapper/: gradle-wrapper.properties
AndroidUVCCameraDemo/libuvccamera/: build.gradle
AndroidUVCCameraDemo/libuvccamera/src/main/jni/: Application.mk
AndroidUVCCameraDemo/libuvccamera/src/main/res/values/: strings.xml
AndroidUVCCameraDemoV2/: .gitignore  README.md  build.gradle
AndroidUVCCameraDemoV2/app/: .gitignore  CMakeLists.txt  build.gradle
AndroidUVCCameraDemoV2/app/src/androidTest/java/com/serenegiant/uvcdemo/: ExampleInstrumentedTest.java
AndroidUVCCameraDemoV2/app/src/main/: AndroidManifest.xml
AndroidUVCCameraDemoV2/app/src/main/cpp/: Application.mk  native-lib.cpp  utilbase.h
AndroidUVCCameraDemoV2/app/src/main/cpp/UVCCamera/: UVCCamera.cpp
AndroidUVCCameraDemoV2/app/src/main/cpp/libjpeg-turbo-1.5.0/: CMakeLists.txt
AndroidUVCCameraDemoV2/app/src/main/cpp/libuvc/src/: device_original.c
AndroidUVCCameraDemoV2/app/src/main/java/com/serenegiant/usb/: CameraDialog.java
AndroidUVCCameraDemoV2/app/src/main/java/com/serenegiant/usbcameracommon/: AbstractUVCCameraHandler.java
AndroidUVCCameraDemoV2/app/src/main/java/com/serenegiant/uvcdemo/: MainActivity.java
AndroidUVCCameraDemoV2/app/src/main/res/layout/: activity_main.xml
AndroidUVCCameraDemoV2/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
AndroidUVCCameraDemoV2/app/src/main/res/values-ja/: strings.xml
AndroidUVCCameraDemoV2/app/src/test/java/com/serenegiant/uvcdemo/: ExampleUnitTest.java
AndroidUVCCameraEclipse/: README.md
AndroidUVCCameraEclipse/UVCCameraExample/: .project  AndroidManifest.xml  project.properties
AndroidUVCCameraEclipse/UVCCameraExample/res/layout/: main.xml
AndroidUVCCameraEclipse/UVCCameraExample/src/com/k2jstudio/uvccam/: CameraActivity.java
AndroidUVCCameraEclipse/UVCCameraLib/: .cproject  .project  AndroidManifest.xml
AndroidUVCCameraEclipse/UVCCameraLib/jni/: Android.mk  util.h  uvccam.c  uvccam.h  video_device.c
AndroidUVCCameraEclipse/UVCCameraLib/res/values/: attrs.xml
AndroidUVCCameraEclipse/UVCCameraLib/src/com/k2jstudio/uvccam/: GlobalConfig.java  NativeUVCcam.java  UVCcam.java  UVCcamManager.java  UVCcamPreview.java  UVCcamServiceManager.java
AndroidUVCCameraSamples/: build.gradle  gradle.properties  local.properties
AndroidUVCCameraSamples/gradle/wrapper/: gradle-wrapper.properties
AndroidUVCCameraSamples/libuvccamera/: build.gradle
AndroidUVCCameraSamples/libuvccamera/src/main/: AndroidManifest.xml
AndroidUVCCameraSamples/libuvccamera/src/main/jni/UVCCamera/: UVCCamera.cpp
AndroidUVCCameraSamples/usbCameraCommon/: build.gradle
AndroidUVCCameraSamples/usbCameraTest/: build.gradle
AndroidUVCCameraSamples/usbCameraTest0/: build.gradle
AndroidUVCCameraSamples/usbCameraTest5/src/main/: AndroidManifest.xml
AndroidUVCCameraSamples/usbCameraTest7/src/main/: AndroidManifest.xml
AndroidUVCCameraStudio/app/: build.gradle
(+23 files in other folders)
